2007-12-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/yarp/yarpserver.cpp: added trivial
	"yarpserver" program that works just like "yarp server"
	(but is easier for windows users to click on)

	* src/libYARP_OS/src/Contact.cpp: the isValid() check was a
	little, how should I say this, completely and utterly wrong.

2007-12-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Image.cpp (_alloc_data): implement 
	inversion of row access for bottom-left origin

2007-12-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: propagate origin
	top-left or bottom-left flag, for better round-tripping with
	OpenCV.

2007-12-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarpview.cpp: now can do everything the GTK+ viewer
	can do, via the wxsdl module.

	* src/modules/wxsdl/WxsdlWriter.cpp: replicate all the documented
	flags of the GTK+ viewer: name, width, height, x, y, and out (port 
	for clicks)

2007-12-02  Giacomo Spigler  <spiglerg@gmail.com>
	* /modules/cuda, /modules/nvidia, /libYARP_dev/include/yarp/dev/GPUInterface.h : Added width() and height() methods to GPU objects, in order to be able to get current working space's dimensions.

2007-12-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/ImageFile.h: read/write
	to ImageRgba (but no A channel in ppm format).

2007-11-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: fixed harmless race condition
	were port could be shut down multiple times.

	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h: improve
	close method to interrupt a read in progress.

	* (many): removed the use of exceptions in port code, to
	facilitate broader porting of libYARP_OS library.  Note: it is now
	more important to check return values when reading from a
	ConnectionReader (or for those methods without a convenient return
	value, checking that ConnectionReader::isError is not set).